fix bug of pre MR